# MediaNamer

./: .gitignore  Cargo.toml  MediaNamer-Project-Idea.md  README.md
docs/superpowers/plans/: 2026-05-04-medianamer.md  2026-05-04-noise-stripping-fallback.md  2026-05-06-design-system-ui.md
docs/superpowers/specs/: 2026-05-04-medianamer-design.md  2026-05-04-noise-stripping-fallback-design.md
medianamer-app/: Cargo.toml
medianamer-app/assets/: medianamer.desktop
medianamer-app/debian/: postinst
medianamer-app/src/: main.rs  state.rs
medianamer-app/src/ui/: file_list.rs  format_bar.rs  help_panel.rs  match_picker.rs  mod.rs  palette.rs  settings.rs  toolbar.rs
medianamer-core/: Cargo.toml
medianamer-core/src/: config.rs  error.rs  lib.rs
medianamer-core/src/matcher/: mod.rs
medianamer-core/src/mediainfo/: mod.rs
medianamer-core/src/naming/: mod.rs
medianamer-core/src/renamer/: mod.rs
medianamer-core/src/sources/: mod.rs  omdb.rs  tmdb.rs  tvdb.rs  tvmaze.rs
medianamer-core/tests/: pipeline.rs  tmdb_integration.rs
packaging/arch/: PKGBUILD
