[package]
name = "medianamer-core"
version = "0.16.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
strsim = "0.11"
async-trait = "0.1"
thiserror = "2"
dirs = "5"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
